resolve personal overdraft print layout issue, redesign the view part

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -181,16 +181,22 @@ button {
 }
 
 @page {
-  padding: 20px auto 20px  auto!important;
-  size: A4 !important;
-  margin: 200px auto 100px auto !important;
+  margin-top: 200px !important;
+    margin-bottom: 100px !important;
+    margin-right: 100px !important;
+    margin-left: 100px !important;
+    padding-top: 20px !important;
+    padding-bottom: 20px !important;
 }
 
 @media print {
   @page {
-    padding: 20px auto 20px  auto!important;
-    size: A4 !important;
-    margin: 200px auto 100px auto !important;
+    margin-top: 200px !important;
+    margin-bottom: 100px !important;
+    margin-right: 100px !important;
+    margin-left: 100px !important;
+    padding-top: 20px !important;
+    padding-bottom: 20px !important;
   }
   .pageBreak {
     page-break-before: always !important;
